charts/transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
spec:
  template:
    spec:
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
        runAsGroup: 1001
        runAsNonRoot: true
        fsGroupChangePolicy: OnRootMismatch
      containers:
      - name: transmission
        image: ghcr.io/home-operations/transmission:4.0.6
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
        - name: medias
          mountPath: /medias

      - name: flood
        image: jesec/flood:4.9.5
        volumeMounts:
        - name: flood-config
          mountPath: /data
        - name: downloads
          mountPath: /downloads
        - name: medias
          mountPath: /medias

      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: config
      - name: flood-config
        persistentVolumeClaim:
          claimName: flood-config
      - name: medias
        persistentVolumeClaim:
          claimName: medias
      - name: downloads
        persistentVolumeClaim:
          claimName: downloads
