charts/transmission/flood-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flood
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    labels:
      app.kubernetes.io/component: flood
