charts/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
spec:
  type: ClusterIP
  ports:
  - name: rpc
    port: 9091
    targetPort: 9091
  - name: bittorrent-tcp
    port: 27071
    targetPort: 27071
  - name: utptcp
    port: 51413
    targetPort: 51413
  - name: utpudp
    port:  51413
    protocol: UDP
    targetPort:  51413
