charts/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flood
spec:
  ingressClassName: cilium
  rules:
  - host: flood.sdg.moe
    http:
      paths:
      - backend:
          service:
            name: flood
            port:
              number: 80
        path: /
        pathType: Prefix
